<resources>
    <string name="app_name">My Application</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Find USB Device</string>
    <string name="refreshing">Refreshing</string>
    <string name="prompt">"\n error"</string>
    <string name="prompt1">"\n Please insert usb device again."</string>

    <!--report界面名称-->
    <string name="absorption">Absorption</string>
    <string name="flourescene">Flourescene</string>
    <string name="near">Near Infrared</string>
    <string name="raman">Raman</string>
    <string name="plasmonics">Plasmonics</string>
    <string name="single">Single particle spectroscopy</string>
    <string name="ultra">Ultra-fast spectroscopy</string>

    <!--standard界面-->
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="person">Personal Health</string>
    <string name="medical">Medical Diagnosis</string>
    <string name="material">Material</string>
    <string name="nanobio">Nanobiotechnology</string>
    <string name="nanophoto">Nanophotonics</string>

    <!--按钮名称-->
    <string name="database">Database</string>
    <string name="library">Library</string>
    <string name="nature">Nature</string>
    <string name="science">Science</string>
    <string name="spectroscopy">Spectroscopy</string>
    <string name="scenario">Scenario</string>
    <string name="standard">Standard</string>
    <string name="device">Device</string>
    <string name="parameter">Parameter</string>
    <string name="map">Map</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="dark">Dark</string>
    <string name="nir">NIR</string>
    <string name="air">Air</string>
    <string name="dialog_title">Library</string>
    <string name="cancelDialog">Cancel</string>

</resources>
