<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="3dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    tools:context="com.example.administrator.myapplication.Main3Activity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f9f7f7">
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/environment"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/environment"
        android:background="#e79292"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/food"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/food"
        android:background="#e7bb92"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/person"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/person"
        android:background="#929fe7"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/medical"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medical"
        android:background="#e7e392"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/material"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/material"
        android:background="#c4e792"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/nanobio"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nanobio"
        android:background="#92e795"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_label"
        android:text="@string/nanophoto"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nanophoto"
        android:background="#92e7cb"/>
    </LinearLayout>
    </ScrollView>

    <!--底部按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nature"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textSize="11sp"/>
    </LinearLayout>

</LinearLayout>
