<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="3dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:orientation="vertical"
    tools:context="com.example.administrator.myapplication.Main31Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/absorption"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#e79292"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flourescene"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#e7bb92"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/near"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#e7e392"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raman"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#c4e792"/>
                
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plasmonics"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#92e795"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single"
                style="@style/text_label"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#92e7cb"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ultra"
                style="@style/text_label" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#929fe7"/>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nature"
            android:textSize="11sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textSize="11sp"/>
    </LinearLayout>

</LinearLayout>
